--- a/about.html
+++ b/about.html
@@ -5,12 +5,14 @@ permalink: /about/
 ---
 
 <div class="about" id="app">
+	<div class="alertBox text-center">${alertMsg}</div>
+	
 	<div class="introduce">
 		<div class="row">
-			<div class="col-md-5">
+			<div class="col-md-6">
 				<img class="profile-img" src="https://avatars3.githubusercontent.com/u/2614303?s=460&v=4">
 			</div>
-			<div class="col-md-7">
+			<div class="col-md-6">
 				<h2>Ye-Chan Kang</h2>
 				<div class="chat-box">
 					<div class="chat">
@@ -24,8 +26,8 @@ permalink: /about/
 				</div>
 				<div class="info-box">
 					<h2 class="info-title">{% octicon mortar-board height:24 %}Education</h2>
-					<p class="info-log">한국게임과학고<span class="info-detail">2016.03 - 2018.02</span></p>
-					<p class="info-log">국민대학교 소프트웨어학과<span class="info-detail">2018.03 - 휴학</span></p>
+					<p class="info-log">한국게임과학고<span class="info-detail left">2016.03 - 2018.02</span></p>
+					<p class="info-log">국민대학교 소프트웨어학과<span class="info-detail left">2018.03 - 휴학</span></p>
 				</div>
 				<div class="info-box">
 					<h2 class="info-title">{% octicon organization height:24 %}Experience</h2>
@@ -33,8 +35,10 @@ permalink: /about/
 				</div>
 			</div>
 		</div>
+		<button type="button" id="next-page-btn" class="btn next-page-btn">{% octicon chevron-down height:50 %}</button>
 	</div>
 	<div class="history">
+		<h2 class="history-main text-center">History</h2>
 		<div class="history-log row" v-for="(log,idx) in logs" :key="idx">
 			<div class="history-content content-year col-md" :class="positionCheckLeft(log.position)">
 				<h2 class="history-year" v-if="log.year">${log.year}</h2>
@@ -47,7 +51,7 @@ permalink: /about/
 				<p class="history-desc">${log.content}</p>
 				<img class="history-head-img" :src="log.img" :class="{'symmetry' : log.position=='LEFT'}">
 				<div class="history-buttons">
-					<button class="btn repo-btn" v-for="(repo, idx) in log.repos" :key="idx" v-on:click="openNewPage(repo.url)">${repo.name}</button>
+					<button class="btn repo-btn" v-for="(repo, idx) in log.repos" :key="idx" v-on:click="openNewPage(repo.url, repo.msg)">${repo.name}</button>
 				</div>
 			</div>
 		</div>	
