--- a/404.html
+++ b/404.html
@@ -2,23 +2,15 @@
 layout: default
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
-
-<div class="container">
-  <h1>404</h1>
-
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+<div class="none-page container">
+  <div class="row">
+	  <div class="col-lg-6">
+		  <h2>{% octicon report height:65 %} 페이지를 찾을 수 없습니다!</h2>
+		  <p>요청하신 주소는 잘못 입력되었거나 <span class="responsive"></span>삭제된 주소 입니다.</p>
+		  <p><a href="/">메인</a> 페이지로 이동하시겠습니까?</p>
+	  </div>
+	  <div class="col-lg-6">
+		<img src="/assets/img/coffee.gif">
+	  </div>
+	</div>
 </div>
