카테고리 한글화

--- a/about.html
+++ b/about.html
@@ -10,13 +10,13 @@ permalink: /about/
 	<div class="introduce">
 		<div class="row">
 			<div class="col-md-6">
-				<img class="profile-img" src="https://avatars3.githubusercontent.com/u/2614303?s=460&v=4">
+				<img class="profile-img" src="https://avatars2.githubusercontent.com/u/14146566?s=460&u=483e82666381dc503a456252f195e3d05230c8ba&v=4">
 			</div>
 			<div class="col-md-6">
 				<h2>Ye-Chan Kang</h2>
 				<div class="chat-box">
 					<div class="chat">
-						<p>으아아아어ㅏㅇ으아그악아ㅏ아응으ㅏㅇ그ㅏㄱㄱ</p>
+						<p>개발중 - 으아아아어ㅏㅇ으아그악아ㅏ아응으ㅏㅇ그ㅏㄱㄱ</p>
 					</div>
 				</div>
 				<div class="info-box">
