--- a/about.html
+++ b/about.html
@@ -11,12 +11,15 @@ permalink: /about/
 		<div class="row">
 			<div class="col-md-6">
 				<img class="profile-img" src="https://avatars2.githubusercontent.com/u/14146566?s=460&u=483e82666381dc503a456252f195e3d05230c8ba&v=4">
+				<div class="theme-block">
+					<button class="theme-btn" v-for="color in themes" :key="color" :style="{backgroundColor: color}" v-on:click="copyThemeColorToClipboard(color)"></button>
+				</div>
 			</div>
 			<div class="col-md-6">
 				<h2>Ye-Chan Kang</h2>
 				<div class="chat-box">
 					<div class="chat">
-						<p>개발중 - 으아아아어ㅏㅇ으아그악아ㅏ아응으ㅏㅇ그ㅏㄱㄱ</p>
+						<p>블로그 개발중입니다 - 부족한게 아직 많습니다 - 으아아아어ㅏㅇ으아그악아ㅏ아응으ㅏㅇ그ㅏㄱㄱ</p>
 					</div>
 				</div>
 				<div class="info-box">
