--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@ permalink: /about/
 				</div>
 			</div>
 		</div>
-		<button type="button" id="next-page-btn" class="btn next-page-btn">{% octicon chevron-down height:50 %}</button>
+		<button type="button" class="btn next-page-btn" v-on:click="nextPageBtn">{% octicon chevron-down height:50 %}</button>
 	</div>
 	<div class="history">
 		<h2 class="history-main text-center">History</h2>
