ADD : yuri-Darkmode

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@ permalink: /about/
 			<div class="col-md-6">
 				<h2>Ye-Chan Kang</h2>
 				<div class="chat-box">
-					<div class="chat">
+					<div class="chat none-light-color">
 						<p>블로그 개발중입니다 - 부족한게 아직 많습니다 - 으아아아어ㅏㅇ으아그악아ㅏ아응으ㅏㅇ그ㅏㄱㄱ</p>
 					</div>
 				</div>
