FIX : about page

--- a/about.html
+++ b/about.html
@@ -19,7 +19,8 @@ permalink: /about/
 				<h2>Ye-Chan Kang</h2>
 				<div class="chat-box">
 					<div class="chat none-light-color">
-						<p>블로그 개발중입니다 - 부족한게 아직 많습니다 - 으아아아어ㅏㅇ으아그악아ㅏ아응으ㅏㅇ그ㅏㄱㄱ</p>
+						<p>주로 웹 프론트 개발을 하며 백엔드에도 관심이 많아 병행하고 있습니다. 취미로는 게임을 개발하고 있습니다.</p>
+						<p>세상을 웃길, 놀래줄 서비스를 목표로 개발을 하고 있고 근래에는 문화개선에 관심이 많아 관련 아이디어들을 개발하고 있습니다. </p>
 					</div>
 				</div>
 				<div class="info-box">
@@ -42,6 +43,10 @@ permalink: /about/
 	</div>
 	<div class="history">
 		<h2 class="history-main text-center">History</h2>
+		<div class="history-part">
+			<p>저에게 큰 의미를 가지거나 인상깊었던 내역입니다.</p>
+			<p>더 많은 이야기는 <a href="/project">프로젝트</a> 페이지 에서 확인할 수 있습니다.</p>
+		</div>
 		<div class="history-log row" v-for="(log,idx) in logs" :key="idx">
 			<div class="history-content content-year col-md" :class="positionCheckLeft(log.position)">
 				<h2 class="history-year" v-if="log.year">${log.year}</h2>
