FIX : notice-box(yuristrap), quick-bar design

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@ permalink: /about/
 				</div>
 			</div>
 		</div>
-		<button type="button" class="btn next-page-btn" v-on:click="nextPageBtn">{% octicon chevron-down height:50 %}</button>
+		<button type="button" class="btn btn-transparent next-page-btn" v-on:click="nextPageBtn">{% octicon chevron-down height:50 %}</button>
 	</div>
 	<div class="history">
 		<h2 class="history-main text-center">History</h2>
