--- a/about.html
+++ b/about.html
@@ -33,10 +33,10 @@ permalink: /about/
 					<p class="info-log">한국게임과학고<span class="info-detail left">2015.03 - 2018.02</span></p>
 					<p class="info-log">국민대학교 소프트웨어학과<span class="info-detail left">2018.03 - 재학중</span></p>
 				</div>
-				<div class="info-box">
+				<!-- <div class="info-box">
 					<h2 class="info-title">{% octicon organization height:24 %}Experience</h2>
 					<p class="info-log"><span class="info-detail right">nullptr</span></p>
-				</div>
+				</div> -->
 			</div>
 		</div>
 		<button type="button" class="btn btn-transparent next-page-btn" v-on:click="nextPageBtn">{% octicon chevron-down height:50 %}</button>
