--- a/resume.html
+++ b/resume.html
@@ -188,17 +188,6 @@ permalink: /resume/
               </ul>
             </li>
             <li>
-              컴포넌트 복잡도 개선
-              <ul class="semi-list origin-ul">
-                <li>Media Query를 이용한 반응형 웹 사이트 작업</li>
-                <li>동적 스타일링을 위한 CSS-IN-JS로 styled-component 도입</li>
-                <li>
-                  컴포넌트 단위로 개발하면서 재사용성을 높이고 반복 작업 최소화
-                </li>
-                <li>Storybook을 이용해 문서화하며 컴포넌트 종류 시각화</li>
-              </ul>
-            </li>
-            <li>
               초기 렌더링 속도 개선
               <ul class="semi-list origin-ul">
                 <li>
@@ -209,6 +198,7 @@ permalink: /resume/
                 </li>
               </ul>
             </li>
+            <div class="print-empty-voicehub"></div>
             <li>
               오디오 플레이어 상태 유지
               <ul class="semi-list origin-ul">
@@ -216,6 +206,17 @@ permalink: /resume/
                   Recoil로 다양한 오디오 재생 컴포넌트들과 상태를 공유하면서
                   불필요한 재렌더링을 방지하고 페이지 이동에도 재생 유지
                 </li>
+              </ul>
+            </li>
+            <li>
+              컴포넌트 복잡도 개선
+              <ul class="semi-list origin-ul">
+                <!-- <li>Media Query를 이용한 반응형 웹 사이트 작업</li>
+                <li>동적 스타일링을 위한 CSS-IN-JS로 styled-component 도입</li> -->
+                <li>
+                  컴포넌트 단위로 개발하면서 재사용성을 높이고 반복 작업 최소화
+                </li>
+                <li>Storybook을 이용해 문서화하며 컴포넌트 종류 시각화</li>
               </ul>
             </li>
           </ul>
